--- a/client/src/views/Start.css
+++ b/client/src/views/Start.css
@@ -1,7 +1,3 @@
-#start {
-
-}
-
 #game-logo {
     font-style: italic;
     margin-bottom: auto;
@@ -12,5 +8,8 @@
     .button-group {
         display: flex;
         flex-direction: column;
+    }
+    .button-group > * {
+        margin-top: 10px;
     }
 }
