packs implemented on choose deck screen

--- a/client/src/components/Dropdown.css
+++ b/client/src/components/Dropdown.css
@@ -21,3 +21,7 @@
 .select-css:focus, .select-css:hover, .select-css:active{
         background-color: #2b579e;
 }
+
+.header-css{
+    padding-top: 50px;
+}
