--- a/client/src/views/Join.css
+++ b/client/src/views/Join.css
@@ -3,17 +3,6 @@
     margin-bottom: auto;
 }
 
-input[data-error=true] {
-    outline: 1.5px solid #d33;
-}
-
-.error-text {
-    display: none;
-}
-
-input[data-error=true] + .error-text {
-    display: block;
-    font-size: .9rem;
-    color: #d33;
-    margin: 5px;
+.user-info > * {
+    margin-bottom: .5rem;
 }
