--- a/client/src/components/Button.css
+++ b/client/src/components/Button.css
@@ -1,4 +1,6 @@
 .button-wrapper button {
+    height: 100%;
+    width: 100%;
     padding: 1.2rem;
     font-size: 1rem;
     color: white;
@@ -18,5 +20,3 @@
 .button-wrapper button:active {
     background: #222;
 }
-
-
