Style cleanup Add normalize.css Add new 'big screen' layout for Expansions screen Subtle tweaks

--- a/client/src/components/DeckMaker.css
+++ b/client/src/components/DeckMaker.css
@@ -1,7 +1,7 @@
 .deck-maker {
     background: whitesmoke;
     margin: 1rem 0;
-    padding: .5rem;
+    padding: 1rem;
 }
 
 .deck-maker > label {
