--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,12 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 h1, h2, h3 {
   margin-top: 0;
 }
-
 
 .button-group {
   width: 100%;
