--- a/client/src/index.css
+++ b/client/src/index.css
@@ -121,12 +121,28 @@ main {
 @media only screen and (max-width: 799px) {
   .panel {
     position: absolute;
-    height: 70vh;
+    max-height: 70vh;
     width: 100vw;
-    bottom: -70vh;
-    bottom:0;
-    transition: bottom .5s ease-out;
+    bottom: 0;
+    transition: transform .4s ease;
     box-shadow: 0px -2px 12px 2px rgba(0,0,0,0.2);
+  }
+
+  .panel[data-collapsed="1"] {
+    transform: translateY(calc(100% - 3.2rem));
+  }
+
+  .panel[data-collapsed="1"] > *:not(.panel-toggle) {
+    display: none;
+  }
+
+  .chat-messages {
+    min-height: 40vh;
+    max-height: 70vh;
+  }
+
+  .chat-messages > chat-message:first-child {
+    margin-top: auto;
   }
 }
 
