--- a/client/src/views/Play.css
+++ b/client/src/views/Play.css
@@ -1,5 +1,6 @@
 #play {
     padding: 0;
+    overflow: hidden;
 }
 
 #play main {
@@ -17,4 +18,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+#play > * {
+    max-height: 100%;
+    overflow: scroll;
 }
