--- a/client/src/components/Card.css
+++ b/client/src/components/Card.css
@@ -2,19 +2,17 @@
     height: 15rem;
     width: 10rem;
     font-weight: bold;
-    font-size: 12px;
+    font-size: 1.2rem;
     border-radius: .8rem;
-    padding: 1rem;
-    font-size: 1rem;
+    padding: 1.2rem;
     box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.2);
     margin: .5rem;
+    text-align: left;
 }
 
 .deck .card {
     display: inline-block;
 }
-
-
 
 .prompt {
     background: black;
