--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,10 +28,10 @@ h1, h2, h3 {
 .view {
   text-align: center;
   height: 100vh;
+  height: -webkit-fill-available;
   padding: 5vh 5vw;
   display: flex;
   flex-direction: column;
-  box-sizing: border-box;
 }
 
 .view > .button-wrapper:last-child {
