--- a/client/src/views/Play.css
+++ b/client/src/views/Play.css
@@ -5,7 +5,9 @@
 
 #play main {
     padding: 5vh 5vw;
-    height: 100%;
+    height: 100vh;
+    height: -webkit-fill-available;
+    box-sizing: border-box;
 }
 
 @media only screen and (min-width: 800px) {
@@ -23,5 +25,6 @@
 
 #play > * {
     max-height: 100%;
+    max-height: -webkit-fill-available;
     overflow: scroll;
 }
