--- a/client/src/views/Join.css
+++ b/client/src/views/Join.css
@@ -1,15 +1,13 @@
-.user-info {
+#join .user-info {
     margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.user-info > * {
-    margin-bottom: .5rem;
-}
-
-.user-info label {
-    width: 9rem;
-}
-
-.user-info input {
-    width: 13rem;
+#join .user-info > * {
+    display: grid;
+    grid-template-columns: 9rem 13rem;
+    margin: .5rem auto;
+    place-items: center;
 }
