--- a/client/src/components/Card.css
+++ b/client/src/components/Card.css
@@ -8,6 +8,7 @@
     box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.2);
     margin: .5rem;
     text-align: left;
+    position: relative;
 }
 
 .deck .card {
@@ -31,4 +32,45 @@
 .card.selected {
     border: 3px solid #8af;
     transform: scale(1.05);
+}
+
+.card-selected-index,
+.card-blank-index,
+.card-response-index {
+    position: absolute;
+    border-radius: 50%;
+    display: inline-grid;
+    place-items: center;
+    background: #88aaff99;
+}
+
+.card-selected-index {
+    top: -1rem;
+    right: -1rem;
+    width: 2.5rem;
+    height: 2.5rem;
+    font-size: 1.5rem;
+    background: #8af;
+}
+
+.card-response-index {
+    position: relative;
+    background: #8af;
+    width: 1.5rem;
+    height: 1.5rem;
+    font-size: 1rem;
+    right: .4rem;
+    bottom: 1px;}
+
+.card-blank-index {
+    left: calc(50% - .75rem);
+    bottom: .1rem;
+    font-size: .9rem;
+    height: 1.5rem;
+    width: 1.5rem;
+}
+
+.card .blank {
+    display: inline-block;
+    position: relative;
 }
