--- a/client/src/components/Button.css
+++ b/client/src/components/Button.css
@@ -20,3 +20,9 @@
 .button-wrapper button:active {
     background: #222;
 }
+
+.button-wrapper[disabled] button {
+    background: #666;
+    color: #ccc;
+    pointer-events: none;
+}
