--- a/client/src/components/Leaderboard.css
+++ b/client/src/components/Leaderboard.css
@@ -36,31 +36,7 @@
     font-weight: bold;
     font-size: 1.8rem;
     display: block;
-    margin-top: 1rem;
-    margin-left: 1rem;
-    margin-right: 1rem;
-}
-
-.leaderboard-content > table {
-    margin: 1rem auto;
-    font-size: 1.25rem;
-}
-
-.leaderboard-content > table td,
-.leaderboard-content > table th {
-    width: auto;
-    padding-top: .25rem;
-    padding-bottom: .25rem;
-}
-
-.leaderboard-content > table td:not(:last-child),
-.leaderboard-content > table th:not(:last-child) {
-    padding-left: 1rem;
-}
-
-.leaderboard-content > table td:not(:first-child),
-.leaderboard-content > table th:not(:first-child) {
-    padding-right: 1rem;
+    margin: 1rem;
 }
 
 .leaderboard .player-score {
@@ -68,16 +44,12 @@
     font-weight: bold;
     color: white;
     background-color: black;
-    border-radius: 2px;
+    border-radius: 4px;
+    font-size: 1.4rem;
     min-width: 1em;
     padding: .2em;
     display: inline-block;
     text-align: center;
-}
-
-
-.leaderboard tr.winner {
-    background: #33aa4433;
 }
 
 .leaderboard .winner .player-score {
@@ -90,12 +62,48 @@
     font-size: .9rem;
 }
 
-.leaderboard td label {
+.leaderboard .player-name,
+.leaderboard .winner-label {
     display: block;
+    word-wrap: break-word;
+    max-width: 6rem;
 }
+
 .winner-label {
     color: #3a4;
     font-size: .8rem;
     font-weight: bold;
     margin-top: .2rem;
+}
+
+.leaderboard-grid-header,
+.leaderboard-grid-body {
+    display: grid;
+    grid-template-columns: 7rem 11rem 7rem;
+    place-items: center;
+}
+
+.leaderboard-grid-body {
+    max-height: 75vh;
+    overflow-y: auto;
+    padding-bottom: 1rem;
+}
+
+.leaderboard-grid-header .cell {
+    font-weight: bold;
+    font-size: 1.2rem;
+}
+.leaderboard-grid-body .cell {
+    padding: .5rem;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    display: grid;
+    align-content: center;
+    /* justify-items: center; */
+    justify-content: center;
+}
+
+.leaderboard-grid-body .cell.winner {
+    background: #33aa4433;
 }
