--- a/client/src/views/Play.css
+++ b/client/src/views/Play.css
@@ -73,3 +73,12 @@
     filter: opacity(.5) blur(2px);
     pointer-events: none;
 }
+
+
+
+#play .card {
+    max-width: calc(50vw - 3.5rem);
+    max-height: calc(1.5 * (50vw - 3.5rem));
+    overflow-y: auto;
+    font-size: min(1.2rem, 5vw);
+}
