--- a/client/src/components/Dropdown.css
+++ b/client/src/components/Dropdown.css
@@ -1,21 +1,19 @@
 .select-css {
     width: 100%;
-    height: 70px;
-    font-size: 100%;
+    font-size: 1rem;
     font-weight: bold;
     cursor: pointer;
     border-radius: 0;
     background-color: #238ce8;
     border: none;
     outline: none;
-    border-top: 10px solid white;
-    border-bottom: 10px solid white;
     color: white;
-    padding: 10px;
     appearance: none;
     -webkit-appearance: none;
     -moz-appearance: none;
-    padding: 10px;
+    transition: background-color .3s linear;
+    padding: 1.2rem;
+    box-shadow: none;
 }
 
 .select-css:focus, .select-css:hover, .select-css:active{
