Re-organize client code

--- a/client/src/components/Button/Button.css
+++ b/client/src/components/Button/Button.css
@@ -21,8 +21,7 @@
     background: #222;
 }
 
-.button-wrapper[disabled] button {
+.button-wrapper button[disabled] {
     background: #666;
     color: #ccc;
-    pointer-events: none;
 }
