--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -25,7 +25,7 @@
     color: black;
 }
 
-.card.hasClick {
+.card.clickable {
     cursor: pointer!important;
 }
 
@@ -73,4 +73,10 @@
 .card .blank {
     display: inline-block;
     position: relative;
+}
+
+.card-content {
+    width: 100%;
+    height: 100%;
+    overflow: auto;
 }
