Accessibility Round 1 Make game playable with keyboard only Start adding ARIA stuff

--- a/client/src/components/Button/Button.css
+++ b/client/src/components/Button/Button.css
@@ -21,7 +21,12 @@
     background: #222;
 }
 
+.button-wrapper button:focus {
+    outline: 2px solid #8af;
+}
+
 .button-wrapper button[disabled] {
     background: #666;
     color: #ccc;
+    cursor: default;
 }
