--- a/client/src/index.css
+++ b/client/src/index.css
@@ -133,15 +133,16 @@ main {
     box-shadow: 0px -2px 12px 2px rgba(0,0,0,0.2);
   }
 
-  .panel[data-collapsed="1"] {
+  .panel[data-collapsed="true"] {
     transform: translateY(calc(100% - 3.2rem));
   }
 
-  .panel[data-collapsed="0"] {
+  .panel[data-collapsed="false"],
+  .panel:not([data-collapsed]) {
     transform: translateY(0);
   }
 
-  .panel[data-collapsed="1"] > *:not(.panel-toggle) {
+  .panel[data-collapsed="true"] > *:not(.panel-toggle) {
     display: none;
   }
 
