--- a/client/src/screens/Expansions/Expansions.css
+++ b/client/src/screens/Expansions/Expansions.css
@@ -1,5 +1,5 @@
 @media only screen and (min-width: 1200px) {
-    #deck-maker-wrapper {
+    .deck-maker-wrapper {
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: .5rem;
