--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -3,8 +3,7 @@
     width: 10rem;
     font-weight: bold;
     font-size: 1.2rem;
-    border-radius: .8rem;
-    padding: 1.2rem;
+    border-radius: min(.8rem, 4vw);
     box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.2);
     margin: .5rem;
     text-align: left;
@@ -62,9 +61,11 @@
     background: #8af;
     width: 1.5rem;
     height: 1.5rem;
-    font-size: 1rem;
-    right: .4rem;
-    bottom: 1px;}
+    font-size: .9rem;
+    right: 2px;
+    bottom: 1px;
+    margin-right: 2px;
+}
 
 .card-blank-index {
     left: calc(50% - .75rem);
@@ -83,4 +84,11 @@
     width: 100%;
     height: 100%;
     overflow: auto;
+    padding: min(1rem, 5vw);
+    box-sizing: border-box;
+}
+
+.card-content label {
+    hyphens: auto;
+    -webkit-hyphens: auto;
 }
