--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -28,3 +28,19 @@
 .chat-submit > .text-box > input {
     height: 100%;
 }
+
+.unread-count {
+    background: #d33;
+    color: #fff;
+    border-radius: 50%;
+    position: absolute;
+    top: 2px;
+    right: 2px;
+    font-size: 1rem;
+    min-width: 1.5rem;
+    height: 1.5rem;
+    display: grid;
+    place-items: center;
+    pointer-events: none;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.3);
+}
