--- a/client/src/screens/WaitingForPlayers/WaitingForPlayers.css
+++ b/client/src/screens/WaitingForPlayers/WaitingForPlayers.css
@@ -58,6 +58,7 @@
     display: flex;
     flex-direction: column;
     margin: .5rem;
+    width: 20rem;
 }
 
 .change-name-popup label {
@@ -72,4 +73,37 @@
 
 .change-name-popup .Button {
     padding: .5rem;
+}
+
+.invite-popup {
+    display: inline-grid;
+    gap: .5rem;
+    margin: .5rem;
+}
+
+.invite-popup label {
+    grid-row: 1;
+    grid-column: 1 / span 2;
+}
+
+.invite-popup input.big-text {
+    grid-row: 2;
+    grid-column: 1;
+    width: 20rem;
+    border: 1px solid rgb(200,200,200);
+    background: rgb(224, 224, 224);
+    height: 2.5rem;
+    box-sizing: border-box;
+}
+
+.invite-popup button {
+    grid-row: 2;
+    grid-column: 2;
+    padding: 0 1.2rem;
+    font-size: .9rem;
+    height: 2.5rem;
+}
+
+.start-game button {
+    margin: .2rem;
 }
