--- a/client/src/screens/WaitingForPlayers/WaitingForPlayers.css
+++ b/client/src/screens/WaitingForPlayers/WaitingForPlayers.css
@@ -1,55 +1,25 @@
-@media only screen and (max-width: 799px) {
-    h1 {
-        grid-row: 1;
-        grid-column: 1;
-    }
-    .user-info {
-        grid-row: 2;
-        grid-column: 1;
-    }
-        
-    .change-name {
-        grid-row: 3;
-        grid-column: 1;
-        margin-bottom: 2rem;
-    }
+#waiting-for-players main {
+    height: 100%;
+}
+#waiting-for-players .button-group {
+    margin-top: auto;
+}
 
-    .currently-joined {
-        grid-row: 4;
-        grid-column: 1;
-    }
-    
-    .start-game {
-        grid-row: 5;
-        grid-column: 1;
+@media only screen and (max-width: 799px) {
+    #waiting-for-players main {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto auto auto 1fr;
     }
 }
 
 @media only screen and (min-width: 800px) {
-    h1 {
-        grid-row: 1;
-        grid-column: 1 / span 2;
+    #waiting-for-players main {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto auto 1fr;
     }
 
-    .user-info {
-        grid-row: 2;
-        grid-column: 1;
-    }
-    
-    .currently-joined {
-        grid-row: 2;
-        grid-column: 2;
-    }
-    
-    
-    .change-name {
-        grid-row: 3;
-        grid-column: 1;
-    }
-    
-    .start-game {
-        grid-row: 3;
-        grid-column: 2;
+    h1, .button-group {
+        grid-column: 1 / span 2;
     }
 }
 
