--- a/cards-against-covid-client/src/screens/Play/Play.css
+++ b/cards-against-covid-client/src/screens/Play/Play.css
@@ -39,7 +39,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow: scroll;
+    overflow: auto;
     margin-top: 1rem;
 }
 
