--- a/cards-against-covid-client/src/index.css
+++ b/cards-against-covid-client/src/index.css
@@ -194,3 +194,43 @@ main {
 .popup-content {
   animation: show-popup .2s ease .2s forwards;
 }
+
+@keyframes show-spinner {
+  0% {
+    opacity: 0;
+    transform: translateY(-2rem);
+  }
+  10% {
+    opacity: 1;
+    transform: translateY(-2rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.lds-dual-ring {
+  display: inline-block;
+  width: 8rem;
+  height: 8rem;
+}
+.lds-dual-ring:after {
+  content: " ";
+  display: block;
+  width: 7rem;
+  height: 7rem;
+  margin: .25rem;
+  border-radius: 50%;
+  border: 4px solid #444;
+  border-color: #444 transparent #444 transparent;
+  animation: lds-dual-ring 1.2s linear infinite;
+}
+@keyframes lds-dual-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
