Tweaks/fixes for client-side health check

--- a/cards-against-covid-client/src/components/ConnectionStatus/ConnectionStatus.css
+++ b/cards-against-covid-client/src/components/ConnectionStatus/ConnectionStatus.css
@@ -31,6 +31,7 @@
     background: white;
     text-align: center;
     box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.4);
+    animation: show-spinner .2s ease forwards;
   }
   
   .connection-status .reconnect-text {
